Make a qemu target for arm64
Signed-off-by: Peter Jones <pjones@redhat.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -639,6 +639,13 @@ config ARCH_QEMU
 	select DM_SERIAL
 	select OF_CONTROL
 
+config ARCH_QEMU64
+	bool "QEMU Virtual Platform (64-bit)"
+	select ARM64
+	select DM
+	select DM_SERIAL
+	select OF_CONTROL
+
 config ARCH_RMOBILE
 	bool "Renesas ARM SoCs"
 	select DM
